debhelper (7.0.18) UNRELEASED; urgency=low

  * dh_installchangelogs: Fall back to looking for changelog files ending
    with ".txt". Closes: #498460
  * dh_gencontrol: Ensure misc:Depends is set in substvars to avoid dpkg
    complaining about it when it's empty. Closes: #498666
  * dh: Fix typo in example. Closes: #500836

 -- Joey Hess <joeyh@debian.org>  Wed, 10 Sep 2008 13:58:00 -0400

debhelper (7.0.17) unstable; urgency=low

  [ Per Olofsson ]
  * dh_auto_install: Fix man page, was referring to dh_auto_clean.

  [ Joey Hess ]
  * dh_gencontrol: Drop the Homepage field from udebs. Closes: #492719
  * Typo. Closes: #493062
  * dh_auto_install: Improve check for MakeMaker, to avoid passing PREFIX
    if the Makefile was generated by Module::Build::Compat. Closes: #496157

 -- Joey Hess <joeyh@debian.org>  Fri, 22 Aug 2008 22:30:12 -0400

debhelper (7.0.16) unstable; urgency=low

  * dh: Avoid passing --with on to subcommands. Closes: #490886
  * dh_installchangelogs: When searching for changelog in v7 mode, skip
    empty files. Closes: #490937

 -- Joey Hess <joeyh@debian.org>  Sat, 19 Jul 2008 15:34:13 -0400

debhelper (7.0.15) unstable; urgency=low

  * dh_clean: Do not delete *-stamp files in -k mode in v7. Closes: #489918

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2008 16:16:11 -0400

debhelper (7.0.14) unstable; urgency=low

  * Load python-support sequence file first, to allow ones loaded later to
    disable it.

 -- Joey Hess <joeyh@debian.org>  Sat, 05 Jul 2008 08:23:32 -0400

debhelper (7.0.13) unstable; urgency=low

  * dh_auto_install: Rather than looking at the number of binary packages
    being acted on, look at the total number of binary packages in the
    source package when deciding whether to install to debian/package or
    debian/tmp. This avoids inconsistencies when building mixed arch all+any
    packages using the binary-indep and binary-arch targets.
    Closes: #487938
