@@ -4,32 +4,10 @@ list grows - I welcome patches to fix items on it!
 Wishlist items:
 
 * All debhelper programs should only accept the options they are documented
-  to accept (rather than accepting all debhelper options). They should
-  be able to print brief usage summaries.
+  to accept (rather than accepting all debhelper options). This is mostly a
+  matter of moving command-specific options out of Dh_Getopt and into the
+  individial command's calls to init(). (#112349)
 
-  I think this calls for a restructuring. Make a Debhelper.pm class. Each
-  program subclasses the class. The class provides command line parsing,
-  useful functions, and so on. Skeleton of a debhelper command would then
-  be:
-
-  use base qw{Debhelper};
-
-  sub startup {
-  	# Add initialization stuff here.
-  }
-
-  sub perpackage {
-  	my $package=shift;
-
-  	# Stuff to do for each package here.
-  }
-
-  sub fini {
-  	# And final stuff here, if any.
-  }
-
-  This needs more thought.
-  
 v8:
 
 * escaping in config files (for whitespace)?
