@@ -5,6 +5,9 @@ debhelper (7.0.18) UNRELEASED; urgency=low
   * dh_gencontrol: Ensure misc:Depends is set in substvars to avoid dpkg
     complaining about it when it's empty. Closes: #498666
   * dh: Fix typo in example. Closes: #500836
+  * Allow individual debhelper programs to define their own special options
+    by passing a hash to init(), which is later passed on the Getopt::Long. 
+    Closes: #370823
 
  -- Joey Hess <joeyh@debian.org>  Wed, 10 Sep 2008 13:58:00 -0400
 
